  "2.10"
- MiscUtilities.StringCompare and StringICaseCompare classes use this
  method by default
- The buffer-local noWordSep property now has a default value of "_".
  Previously, there was no default, but most modes specified a value of
  "_".
- jEdit now backs up files it saves to the settings directory to
  $HOME/.jedit/settings-backups

+ Bug Fixes

- 'Recent Files' menu behaved in a strange manner if there were no
  recent files
- Fixed a NullPointerException if the 'Narrow to Selection' command
  was invoked with no selection
- JCheckBoxList typo prevented it from working in the XML plugin
- On MacOS, the option key, which is reported as ALT, can be used to
  generate user input, but jEdit ignored Alt key strokes that were not
  bound to shortcuts.
- More JDK 1.4 key event bug workarounds
- History text field border wasn't repainted after the model was changed
- If two shortcuts were assigned to a command, the second wasn't shown
  in the tool bar button tooltip
- In syntax highlighting rule sets that enabled digit highlighting but
  didn't have SEQ rules for '-' and '.', these two characters would be
  highlighted with the digit syntax style, even if they were not part of
  a numeric expression.
- Pressing Home three times put the caret at the end of the last visible
  line, not the start of the last visible line as intended
- Entering a file name in the text field of the Open dialog box would
  open that file name relative to jEdit's current working directory, not
  the directory selected in the dialog box
- 'Reload' command didn't preserve caret position very well if sections
  of the buffer were folded
- When running on Java 2 version 1.3 (and possibly others), the default
  size of the help viewer was not set properly
- Velocity mode had an incorrect file name glob
- In the Search and Replace dialog box, 'Replace with:' and 'Auto wrap'
  had the same Alt-key mnemonic
- Regular expression bug fixes: